# comm-compute-study

./: README.md  pyproject.toml
src/comm_compute_study/: __init__.py  cli.py
src/comm_compute_study.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/comm_compute_study/dense_model/: model.py
src/comm_compute_study/dense_model/infra/: parallelize.py
src/comm_compute_study/models/: __init__.py  layers.py  models.py  spec.py
src/comm_compute_study/training/: __init__.py  config.py  data.py  loop.py
