[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comm-compute-study"
version = "0.1.0"
description = "Tools for studying communication vs compute tradeoffs in distributed training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.15.8",
    "torch>=2.1",
    "torchtitan>=0.2.2",
]

[project.scripts]
comm-compute-study = "comm_compute_study.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
